--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
         :root {
             --primary-green: #43A047;
-            --light-green: #66BB6A; /* Mid-tone green */
+            --light-green: #66BB6A; 
             --accent-green: #9CCC65; 
             --earth-brown: #8b6f47;
             --bg-light: #F7FCF7; /* Very light green tint */
@@ -2311,6 +2311,7 @@
 </body>
 
 </html>
+
 
 
 
